Data explorer schema display and scrollbar fixes

--- a/vyne-query-service/src/main/web/src/app/query-panel/result-display/result-container.component.scss
+++ b/vyne-query-service/src/main/web/src/app/query-panel/result-display/result-container.component.scss
@@ -103,8 +103,10 @@ app-call-explorer {
 }
 
 .virtualScroll-viewport {
-  height: 100vh - 15vh; // to match height of the tab bar;
+  height: 84vh; // to match height of the tab bar;
+  width: 144vh; // to match the width of results pane
   overflow-x: hidden;
+  position: absolute;
 }
 
 // Use these for border colors of nesting levels:
